[package]
name = "ubiorbitapi_r2_loader"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ctor = "0.1"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
log = "0.4"
fnlog = "0.1"
simplelog = "0.11"
log-panics = "2.0"
stdext = "0.3"
if_chain = "1.0"
dirs = "4.0"
anyhow = "1.0"
once_cell = "1.8"
widestring = "0.5"
derive-new = "0.5"
ustr = "0.8"
cxxabi = { path = "crates/cxxabi" }
thiscall = { path = "crates/thiscall" }

[lib]
name = "ubiorbitapi_r2_loader"
crate-type = ["cdylib"]

[profile.release]
lto = "fat"
opt-level = "s"
codegen-units = 1
