[package]
name = "cxxabi"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
darling = "0.13"
syn = { version = "1.0", features = ["full", "visit", "extra-traits"] }

[lib]
proc-macro = true